--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -48,6 +48,15 @@ INSTALL(
     COMPONENT chan-quectel
 )
 
+IF(IS_GIT_REPO)
+    IF(DEFINED CMAKE_READELF)
+        ADD_TEST(NAME "Load library" COMMAND ${CMAKE_READELF} -e $<TARGET_FILE:asterisk-chan-quectel>)
+        ADD_TEST(NAME "Show comment section" COMMAND ${CMAKE_READELF} -e $<TARGET_FILE:asterisk-chan-quectel>)
+    ELSE()
+        MESSAGE(WARNING Cannot find readelf utility)
+    ENDIF()
+ENDIF()
+
 # formatting targets
 IF(NOT CLANG_FORMAT OR "${CLANG_FORMAT}" STREQUAL CLANG_FORMAT-NOTFOUND)
     MESSAGE(WARNING "Cannot create formatting targets - clang-format not found")
