docker: Prerform tests

--- a/docker/builder/rpi/Dockerfile
+++ b/docker/builder/rpi/Dockerfile
@@ -16,4 +16,4 @@ ARG CC_TOOLCHAIN
 USER nobody:nogroup
 RUN task -d /build/task.d/chan-quectel clone
 RUN --network=none task -d /build/task.d/chan-quectel configure
-RUN --network=none task -d /build/task.d/chan-quectel build
+RUN --network=none task -d /build/task.d/chan-quectel build test
