--- a/docker/builder/centos/Dockerfile
+++ b/docker/builder/centos/Dockerfile
@@ -13,4 +13,4 @@ ARG PRESET=rpm
 USER nobody:nobody
 RUN task -d /build/task.d/chan-quectel clone
 RUN --network=none scl enable devtoolset-11 'task -d /build/task.d/chan-quectel configure'
-RUN --network=none scl enable devtoolset-11 'task -d /build/task.d/chan-quectel build'
+RUN --network=none scl enable devtoolset-11 'task -d /build/task.d/chan-quectel build test'
