--- a/docker/builder/native/Dockerfile
+++ b/docker/builder/native/Dockerfile
@@ -13,4 +13,4 @@ ARG PRESET
 USER nobody:nogroup
 RUN task -d /build/task.d/chan-quectel clone
 RUN --network=none task -d /build/task.d/chan-quectel configure
-RUN --network=none task -d /build/task.d/chan-quectel build
+RUN --network=none task -d /build/task.d/chan-quectel build test
