--- a/docker/builder/cc/Taskfile.dist.yaml
+++ b/docker/builder/cc/Taskfile.dist.yaml
@@ -15,7 +15,7 @@ tasks:
           {{if .DOCKER_IMAGE_ENV_VERBOSITY|default "auto"|eq "none"}}-q{{end}}
           {{if .DOCKER_IMAGE_ENV_BUILD|default 0|int|eq 2}}--no-cache{{end}}
           --target={{.TARGET}}
-          --build-context task=../../task
+          --build-context task=../../task.d
           --build-arg CC_TARGET={{.CC_TARGET}}
           --build-arg CC_TOOLCHAIN={{.CC_TOOLCHAIN}}
           {{if .DOCKER_IMAGE_ENV_VERBOSITY|default "auto"|eq "plain"}}--progress plain{{end}}
