--- a/docker/task.d/chan-quectel/Taskfile.dist.yaml
+++ b/docker/task.d/chan-quectel/Taskfile.dist.yaml
@@ -43,11 +43,11 @@ tasks:
         sh: command -v ninja || true
     cmds:
       - >-
-        cmake --preset={{.PRESET}}
+        cmake --preset={{.PRESET}} --log-level={{if .CMAKE_VERBOSE}}VERBOSE{{else}}STATUS{{end}}
         {{if .NINJA_BUILDER}}-G Ninja{{end}}
         {{if .CC_TOOLCHAIN}}--toolchain=cmake/toolchain/{{.CC_TOOLCHAIN}}.toolchain.cmake{{end}}
         {{if .ASTERISK_VERSION_NUM}}-DASTERISK_VERSION_NUM={{.ASTERISK_VERSION_NUM}}{{end}}
-      - cmake --build --preset=package-{{.PRESET}}
+      - cmake --build --preset=package-{{.PRESET}} {{if .CMAKE_VERBOSE}}-v{{end}}
 
   test:
     desc: Test chan_quectel library
@@ -55,4 +55,4 @@ tasks:
       - test -n "{{.PRESET}}"
     dir: '{{.BUILD_DIR}}/chan-quectel'
     cmds:
-      - ctest --preset={{.PRESET}}
+      - ctest --preset={{.PRESET}} {{if .CMAKE_VERBOSE}}-V{{end}}
