--- a/docker/builder/rpi/Dockerfile
+++ b/docker/builder/rpi/Dockerfile
@@ -12,6 +12,7 @@ ARG PRESET
 ARG RPI_VERSION=1
 ARG CC_TARGET
 ARG CC_TOOLCHAIN
+ARG CMAKE_VERBOSE
 
 USER nobody:nogroup
 RUN task -d /build/task.d/chan-quectel clone
