cmake: Fix toolchains

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -244,7 +244,16 @@ IF(BUILD_CHAN_QUECTEL_BINARY)
     CHECK_INCLUDE_FILE(termios.h HAVE_TERMIOS_H)
     CHECK_INCLUDE_FILE(unistd.h HAVE_UNISTD_H)
 
-    FIND_PACKAGE(Threads REQUIRED)
+    IF(CMAKE_CROSSCOMPILING)
+        FIND_PACKAGE(Threads QUIET)
+        IF(NOT DEFINED Threads_FOUND)
+            MESSAGE(WARNING "Assuming pthread-compatible compiler")
+            ADD_LIBRARY(Threads::Threads INTERFACE IMPORTED)
+            SET_PROPERTY(TARGET Threads::Threads PROPERTY INTERFACE_COMPILE_OPTIONS "-pthread")
+        ENDIF()
+    ELSE()
+        FIND_PACKAGE(Threads REQUIRED)
+    ENDIF()
     FIND_PACKAGE(ALSA 1.1.2 REQUIRED)
     FIND_PACKAGE(SQLite3 3.6.5 REQUIRED)
     FIND_PACKAGE(Iconv REQUIRED)
