--- a/docker/builder/rpi/Taskfile.dist.yaml
+++ b/docker/builder/rpi/Taskfile.dist.yaml
@@ -24,26 +24,51 @@ tasks:
           .
           {{if .DOCKER_IMAGE_ENV_VERBOSITY|default "auto"|eq "none"}}> /dev/null{{end}}
 
-  build:
+  build-from-repo:
     desc: Build chan_quectel module
-    aliases: [default]
+    aliases: [default, build]
     requires:
       vars: [BASEIMG, PRESET, BRANCH, IID_FILE, CC_TARGET, CC_TOOLCHAIN, RPI_VERSION]
     cmds:
-        - cmd: >-
-            docker image build
-            {{if .DOCKER_IMAGE_BUILDER_VERBOSITY|default "plain"|eq "none"}}-q{{end}}
-            --no-cache
-            --build-arg BASEIMG={{.BASEIMG}}
-            --build-arg PRESET={{.PRESET}}
-            --build-arg BRANCH={{.BRANCH}}
-            --build-arg CC_TARGET={{.CC_TARGET}}
-            --build-arg CC_TOOLCHAIN={{.CC_TOOLCHAIN}}
-            {{if .CMAKE_VERBOSE}}--build-arg CMAKE_VERBOSE=1{{end}}
-            {{if .ASTERISK_VERSION_NUM}}--build-arg ASTERISK_VERSION_NUM={{.ASTERISK_VERSION_NUM}}{{end}}
-            {{if .DOCKER_IMAGE_BUILDER_VERBOSITY|default "plain"|eq "plain"}}--progress plain{{end}}
-            --build-arg RPI_VERSION={{.RPI_VERSION}}
-            -f ../../builder/rpi/Dockerfile
-            --iidfile {{.IID_FILE}}
-            .
-            {{if .DOCKER_IMAGE_BUILDER_VERBOSITY|default "plain"|eq "none"}}> /dev/null{{end}}
+      - cmd: >-
+          docker image build
+          {{if .DOCKER_IMAGE_BUILDER_VERBOSITY|default "plain"|eq "none"}}-q{{end}}
+          --no-cache
+          --target=build-from-repo
+          --build-arg BASEIMG={{.BASEIMG}}
+          --build-arg PRESET={{.PRESET}}
+          --build-arg BRANCH={{.BRANCH}}
+          --build-arg CC_TARGET={{.CC_TARGET}}
+          --build-arg CC_TOOLCHAIN={{.CC_TOOLCHAIN}}
+          {{if .CMAKE_VERBOSE}}--build-arg CMAKE_VERBOSE=1{{end}}
+          {{if .ASTERISK_VERSION_NUM}}--build-arg ASTERISK_VERSION_NUM={{.ASTERISK_VERSION_NUM}}{{end}}
+          {{if .DOCKER_IMAGE_BUILDER_VERBOSITY|default "plain"|eq "plain"}}--progress plain{{end}}
+          --build-arg RPI_VERSION={{.RPI_VERSION}}
+          -f ../../builder/rpi/Dockerfile
+          --iidfile {{.IID_FILE}}
+          .
+          {{if .DOCKER_IMAGE_BUILDER_VERBOSITY|default "plain"|eq "none"}}> /dev/null{{end}}
+
+  build-from-local:
+    desc: Build chan_quectel module
+    requires:
+      vars: [BASEIMG, PRESET, IID_FILE, CC_TARGET, CC_TOOLCHAIN, RPI_VERSION, SOURCES_DIR]
+    cmds:
+      - cmd: >-
+          docker image build
+          {{if .DOCKER_IMAGE_BUILDER_VERBOSITY|default "plain"|eq "none"}}-q{{end}}
+          --no-cache
+          --build-context chan-quectel-src={{.SOURCES_DIR}} --target=build-from-local
+          --build-arg BASEIMG={{.BASEIMG}}
+          --build-arg PRESET={{.PRESET}}
+          --build-arg BRANCH={{.BRANCH}}
+          --build-arg CC_TARGET={{.CC_TARGET}}
+          --build-arg CC_TOOLCHAIN={{.CC_TOOLCHAIN}}
+          {{if .CMAKE_VERBOSE}}--build-arg CMAKE_VERBOSE=1{{end}}
+          {{if .ASTERISK_VERSION_NUM}}--build-arg ASTERISK_VERSION_NUM={{.ASTERISK_VERSION_NUM}}{{end}}
+          {{if .DOCKER_IMAGE_BUILDER_VERBOSITY|default "plain"|eq "plain"}}--progress plain{{end}}
+          --build-arg RPI_VERSION={{.RPI_VERSION}}
+          -f ../../builder/rpi/Dockerfile
+          --iidfile {{.IID_FILE}}
+          .
+          {{if .DOCKER_IMAGE_BUILDER_VERBOSITY|default "plain"|eq "none"}}> /dev/null{{end}}
