--- a/docker/docker.env
+++ b/docker/docker.env
@@ -2,3 +2,4 @@ DOCKER_QUIET=0
 DOCKER_IMAGE_ENV_BUILD=0
 DOCKER_IMAGE_ENV_VERBOSITY=auto
 DOCKER_IMAGE_BUILDER_VERBOSITY=plain
+SOURCE_LOCATION=repo
