--- a/docker/builder/cc/Dockerfile
+++ b/docker/builder/cc/Dockerfile
@@ -5,8 +5,11 @@
 #
 
 ARG BASEIMG
-FROM ${BASEIMG}
 ARG BRANCH=master
+ARG PRESET
+
+FROM ${BASEIMG} AS build-from-repo
+ARG BRANCH
 ARG ASTERISK_VERSION_NUM
 ARG PRESET
 ARG CC_TARGET
@@ -18,3 +21,14 @@ RUN task -d /build/task.d/chan-quectel clone
 RUN --network=none task -d /build/task.d/chan-quectel configure
 RUN --network=none task -d /build/task.d/chan-quectel build test
 
+FROM ${BASEIMG} AS build-from-local
+ARG ASTERISK_VERSION_NUM
+ARG PRESET
+ARG CC_TARGET
+ARG CC_TOOLCHAIN
+ARG CMAKE_VERBOSE
+
+COPY --from=chan-quectel-src --chown=nobody:nogroup / /build/chan-quectel
+USER nobody:nogroup
+RUN --network=none task -d /build/task.d/chan-quectel configure
+RUN --network=none task -d /build/task.d/chan-quectel build test
