--- a/docker/builder/centos/Dockerfile
+++ b/docker/builder/centos/Dockerfile
@@ -5,13 +5,26 @@
 #
 
 ARG BASEIMG
-FROM ${BASEIMG}
 ARG BRANCH=master
-ARG ASTERISK_VERSION_NUM
 ARG PRESET=rpm
+
+FROM ${BASEIMG} AS build-from-repo
+ARG BRANCH
+ARG ASTERISK_VERSION_NUM
+ARG PRESET
 ARG CMAKE_VERBOSE
 
 USER nobody:nobody
 RUN task -d /build/task.d/chan-quectel clone
+RUN --network=none scl enable devtoolset-11 'task -d /build/task.d/chan-quectel configure'
+RUN --network=none scl enable devtoolset-11 'task -d /build/task.d/chan-quectel build test'
+
+FROM ${BASEIMG} AS build-from-local
+ARG ASTERISK_VERSION_NUM
+ARG PRESET
+ARG CMAKE_VERBOSE
+
+COPY --from=chan-quectel-src --chown=nobody:nogroup / /build/chan-quectel
+USER nobody:nobody
 RUN --network=none scl enable devtoolset-11 'task -d /build/task.d/chan-quectel configure'
 RUN --network=none scl enable devtoolset-11 'task -d /build/task.d/chan-quectel build test'
