--- a/docker/builder/native/Dockerfile
+++ b/docker/builder/native/Dockerfile
@@ -5,13 +5,27 @@
 #
 
 ARG BASEIMG
-FROM ${BASEIMG}
 ARG BRANCH=master
+ARG PRESET
+
+FROM ${BASEIMG} AS build-from-repo
+ARG BRANCH
 ARG ASTERISK_VERSION_NUM
 ARG PRESET
 ARG CMAKE_VERBOSE
 
 USER nobody:nogroup
 RUN task -d /build/task.d/chan-quectel clone
+RUN --network=none task -d /build/task.d/chan-quectel configure
+RUN --network=none task -d /build/task.d/chan-quectel build test
+
+FROM ${BASEIMG} AS build-from-local
+ARG BRANCH
+ARG ASTERISK_VERSION_NUM
+ARG PRESET
+ARG CMAKE_VERBOSE
+
+COPY --from=chan-quectel-src --chown=nobody:nogroup / /build/chan-quectel
+USER nobody:nogroup
 RUN --network=none task -d /build/task.d/chan-quectel configure
 RUN --network=none task -d /build/task.d/chan-quectel build test
