--- a/docker/builder/rpi/Dockerfile
+++ b/docker/builder/rpi/Dockerfile
@@ -5,16 +5,33 @@
 #
 
 ARG BASEIMG
-FROM ${BASEIMG}
 ARG BRANCH=master
-ARG ASTERISK_VERSION_NUM
 ARG PRESET
 ARG RPI_VERSION=1
+
+FROM ${BASEIMG} AS build-from-repo
+ARG BRANCH
+ARG ASTERISK_VERSION_NUM
+ARG PRESET
+ARG RPI_VERSION
 ARG CC_TARGET
 ARG CC_TOOLCHAIN
 ARG CMAKE_VERBOSE
 
 USER nobody:nogroup
 RUN task -d /build/task.d/chan-quectel clone
+RUN --network=none task -d /build/task.d/chan-quectel configure
+RUN --network=none task -d /build/task.d/chan-quectel build test
+
+FROM ${BASEIMG} AS build-from-local
+ARG ASTERISK_VERSION_NUM
+ARG PRESET
+ARG RPI_VERSION
+ARG CC_TARGET
+ARG CC_TOOLCHAIN
+ARG CMAKE_VERBOSE
+
+COPY --from=chan-quectel-src --chown=nobody:nogroup / /build/chan-quectel
+USER nobody:nogroup
 RUN --network=none task -d /build/task.d/chan-quectel configure
 RUN --network=none task -d /build/task.d/chan-quectel build test
