docker: Use AST_HEADER_DIR variable
- Install Asterisk headers in separate directory.
- Configuration: Define AST_HEADER_DIR.
- Configuration: Display value of AST_BUILDOPT_SUM macro.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@
 # asterisk-chan-quectel
 #
 
-CMAKE_MINIMUM_REQUIRED(VERSION 3.19)
+CMAKE_MINIMUM_REQUIRED(VERSION 3.20)
 
 FUNCTION(FindClangFormat OutVar)
     UNSET(CLANG_FORMAT_EXE)
@@ -52,6 +52,23 @@ FUNCTION(SetProjectVersion cmajor cminor cpatch ctweak cstatus)
         # long form
         SET(CHAN_VER_STR "${MMAJOR}.${MMINOR}.${MPATCH}-${ctweak}${cstatus}" PARENT_SCOPE)
         SET(CHAN_VER_FSTR "${MMAJOR}.${MMINOR}.${MPATCH}_${ctweak}${cstatus}" PARENT_SCOPE)
+    ENDIF()
+ENDFUNCTION()
+
+FUNCTION(ShowAstBuildOptSum AST_HEADERS_SUBDIR)
+    CMAKE_PATH(APPEND AST_HEADERS_SUBDIR "..")
+    CMAKE_PATH(NORMAL_PATH AST_HEADERS_SUBDIR)
+    MESSAGE(STATUS "Asterisk header directory: ${AST_HEADERS_SUBDIR}")    
+    TRY_RUN(AST_BUILDOPT_SUM_RUN AST_BUILDOPT_SUM_COMPILE ${CMAKE_BINARY_DIR}/AST_BUILDOPT_SUM
+        SOURCES ${CMAKE_SOURCE_DIR}/test/asterisk/AST_BUILDOPT_SUM.c
+        COMPILE_DEFINITIONS "-I${AST_HEADERS_SUBDIR}"
+        RUN_OUTPUT_VARIABLE AST_BUILDOPT_SUM_RAW
+    )
+    IF(AST_BUILDOPT_SUM_COMPILE AND AST_BUILDOPT_SUM_RUN)
+        STRING(STRIP ${AST_BUILDOPT_SUM_RAW} AST_BUILDOPT_SUM)
+        MESSAGE(STATUS  "AST_BUILDOPT_SUM=${AST_BUILDOPT_SUM}")
+    ELSE()
+        MESSAGE(FATAL_ERROR "Asterisk: Unknown value of AST_BUILDOPT_SUM")
     ENDIF()
 ENDFUNCTION()
 
@@ -202,17 +219,25 @@ IF(BUILD_CHAN_QUECTEL_BINARY)
 
     SET(CMAKE_REQUIRED_DEFINITIONS "-DAST_MODULE_SELF_SYM=__internal_chan_quectel_self")
 
+    ADD_LIBRARY(AsteriskModule INTERFACE)
+    TARGET_COMPILE_DEFINITIONS(AsteriskModule INTERFACE "AST_MODULE_SELF_SYM=__internal_chan_quectel_self")
     IF(DEFINED AST_HEADER_DIR)
         MESSAGE(STATUS "Asterisk header directory: ${AST_HEADER_DIR}")
-        INCLUDE_DIRECTORIES(BEFORE ${AST_HEADER_DIR})
-        CHECK_INCLUDE_FILE(asterisk.h HAVE_ASTERISK_H -I${AST_HEADER_DIR})
-    ELSE()
-        CHECK_INCLUDE_FILE(asterisk.h HAVE_ASTERISK_H)
+        SET(CMAKE_REQUIRED_INCLUDES ${AST_HEADER_DIR})
+        TARGET_INCLUDE_DIRECTORIES(AsteriskModule BEFORE INTERFACE ${AST_HEADER_DIR})
     ENDIF()
 
+    CHECK_INCLUDE_FILE(asterisk.h HAVE_ASTERISK_H)
     IF(NOT HAVE_ASTERISK_H)
         MESSAGE(FATAL_ERROR "Asterisk header not found.")
     ENDIF()
+
+    IF(DEFINED AST_HEADER_DIR)
+        FIND_PATH(AST_HEADERS_SUBDIR NAMES buildopts.h PATHS ${AST_HEADER_DIR} PATH_SUFFIXES asterisk NO_CACHE NO_DEFAULT_PATH REQUIRED)
+    ELSE()
+        FIND_PATH(AST_HEADERS_SUBDIR NAMES buildopts.h PATH_SUFFIXES asterisk NO_CACHE REQUIRED)
+    ENDIF()
+    ShowAstBuildOptSum(${AST_HEADERS_SUBDIR})
 
     CHECK_INCLUDE_FILES("stdarg.h;asterisk.h;asterisk/frame.h" HAVE_ASTERISK_FRAME_H)
     CHECK_SYMBOL_EXISTS(AST_CONTROL_SRCCHANGE "stdarg.h;asterisk.h;asterisk/frame.h" HAVE_AST_CONTROL_SRCCHANGE)
@@ -263,9 +288,6 @@ IF(BUILD_CHAN_QUECTEL_BINARY)
 
     CONFIGURE_FILE(config.h.in include/config.h)
     CONFIGURE_FILE(src/ptime-config.h.in include/ptime-config.h)
-
-    FIND_PATH(AST_HEADERS_SUBDIR NAMES buildopts.h PATH_SUFFIXES asterisk NO_CACHE REQUIRED)
-    MESSAGE(STATUS "Asterisk headers: ${AST_HEADERS_SUBDIR}")
 
     INCLUDE(GNUInstallDirs)
     ADD_SUBDIRECTORY(src)
