Improve SOURCE_DATE_EPOCH handling

--- a/cmake/source-date-epoch/CMakeLists.txt
+++ b/cmake/source-date-epoch/CMakeLists.txt
@@ -5,7 +5,7 @@
 FUNCTION(CheckSourceDateEpoch)
     IF(DEFINED ENV{SOURCE_DATE_EPOCH})
         STRING(TIMESTAMP SOURCE_DATE_STR UTC)
-        MESSAGE(STATUS "SOURCE_DATE_EPOCH: ${SOURCE_DATE_STR} [@$ENV{SOURCE_DATE_EPOCH}]")
+        MESSAGE(STATUS "SOURCE_DATE_EPOCH=$ENV{SOURCE_DATE_EPOCH} # ${SOURCE_DATE_STR}")
         CONFIGURE_FILE(source-date-epoch.env.in source-date-epoch.env NO_SOURCE_PERMISSIONS)
     ELSE()
         MESSAGE(FATAL_ERROR "Environment variable SOURCE_DATE_EPOCH not defined")
